--- a/css/numeros.css
+++ b/css/numeros.css
@@ -9,6 +9,9 @@
   .numeros-grid {
     grid-column: 1;
   }
+  .numeros-grid h3{
+    font-size: 1.5em
+  }
 }
 
 .numeros-grid h3 {
@@ -21,5 +24,5 @@
   font-family: 'IBM Plex Mono', monospace;
   font-weight: bold;
   font-size: 1.5rem;
-  color: #E54;
+  color: #55BBFF;
 }
