--- a/css/modal.css
+++ b/css/modal.css
@@ -17,11 +17,13 @@
 
 .modal {
   background: white;
-  min-width: 300px;
+  width: 80vw;
+  max-width: 600px ;
   padding: 40px;
   border: 10px solid #FB5;
   box-shadow: 0 0 0 10px white;
   position: relative;
+  box-sizing: border-box;
 }
 
 @keyframes modal {
@@ -79,4 +81,5 @@
   font-family: 'IBM Plex Mono', monospace;
   margin-top: 1rem;
   font-weight: bold;
+  cursor: pointer;
 }
